--- a/Polishing.html
+++ b/Polishing.html
@@ -21,8 +21,10 @@
    <nav class="navbar navbar-expand-lg" id="uter" style="height: 50px; width: 100vw">
       <div class="container-fluid">
         <div class="navbar-header" style="min-width: 33%; text-align: left">
+            <a class="nav-link" href="#">
               <img src="icons/scissors.ico" alt="scissors" class="img-fluid" style="max-width: 10%">
               <span class="logo">HAIR POLISHING</span>
+            </a>
         </div>
         <div class="collapse navbar-collapse" style="width: 67%;">
                   <ul class="navbar-nav" >
